--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+    <title>Home | Ruby on Rails Tutorial Sample App</title>
+</head>
+<body>
+	<h1>Welcome Home!</h1>
+	<p>Pie is on the sill, and we're just drinking tea in the living room.</p>	
+</body>
+</html>
