finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,7 @@
+<% provide(:title, "About") %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-    <title>About | Ruby on Rails Tutorial Sample App</title>
 </head>
 <body>
 	<h1>ABOOOOUUUT...FACE!</h1>	
