--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,8 @@
+<% provide(:title, "Help") %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Help | Ruby on Rails Tutorial Sample App</title>
 </head>
 <body>
 	<h1>This is the Help page</h1>
