--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
+<% provide(:title, "Home") %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <title>Home | Ruby on Rails Tutorial Sample App</title>
 </head>
 <body>
 	<h1>Welcome Home!</h1>
