--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
-    <%= csrf_meta_tags %>
-	<title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+	<title><%= full_title(yield(:title)) %></title>
+	<%= render 'layouts/default_rails' %>  
+    <%= render 'layouts/shim' %>
   </head>
-
   <body>
-    <%= yield %>
+  	<%= render 'layouts/header' %>
+  	<div class="container">
+    	<%= yield %>
+    	<%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
