--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,18 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<h1>Welcome Home!</h1>
-	<p>Pie is on the sill, and we're just drinking tea in the living room.</p>	
+	<div class="center jumbotron">
+		<h1>Welcome!!</h1>
+
+		<h2>
+			This is the home page for the
+    		<a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    		sample application.
+		</h2>
+		<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+	</div>
+
+	<%= link_to image_tag("rails.png", alt: "Rails logo"),
+            'http://rubyonrails.org/' %>
 </body>
 </html>
